hphp/test/zend/good/ext/gd/tests/imagewbmp_nullbyte_injection.php.skipif
<?php
$support = gd_info();
if (!isset($support['WBMP Support']) || $support['WBMP Support'] === false) {
	print 'skip wbmp support not available';
}
?>